# BuffetBot

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CONSOLIDATION.md  CHANGELOG.md  CONFIGURATION_FILES.md  CONTRIBUTING.md  DEPLOYMENT.md  FILE_CLEANUP_PLAN.md  FINAL_VERIFICATION.md  GOOGLE_ANALYTICS_INTEGRATION.md  GlossaryComponent.jsx  LICENSE  MANIFEST.in  Makefile  ORGANIZE_DOCS_PROMPT.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  RUNNING_THE_APP.md  TEST_SUMMARY.md  cli.py  commit_message.txt  env.example  example_integration.py  glossary.py  glossary_README.md  glossary_app.py  glossary_ui_README.md  main.py  packages.txt  pyproject.toml  pytest.ini  remove_path_setup.py  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  run_app.py  run_dashboard.py  (+9 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
analysis/: __init__.py  ecosystem.py  growth_analysis.py  health_analysis.py  options_advisor.py  risk_analysis.py  value_analysis.py
api/: __init__.py  main.py
api/models/: __init__.py
archive/: app_original_backup.py
buffetbot/: __init__.py  cli.py  glossary.py
buffetbot/analysis/: ecosystem.py  growth_analysis.py  health_analysis.py  options_advisor.py  risk_analysis.py  value_analysis.py
buffetbot/config/: gcs_config.py
buffetbot/dashboard/: README_MODULAR_ARCHITECTURE.md  __init__.py  app.py  streamlit_app.py
buffetbot/data/: __init__.py  cleaner.py  fetcher.py  forecast_fetcher.py  options_fetcher.py  peer_fetcher.py  source_status.py
buffetbot/features/: __init__.py
buffetbot/ml/: __init__.py
buffetbot/recommend/: __init__.py  recommender.py
buffetbot/storage/: README.md  __init__.py
buffetbot/utils/: __init__.py  cache.py  correlation_math.py  data_fetcher.py  data_report.py  errors.py  validators.py
config/: .editorconfig  README.md  env.development  env.production  env.testing
dashboard/: README.md  __init__.py  app.py  app_modular.py  streamlit_app.py
dashboard/components/: __init__.py  charts.py  forecast_panel.py  glossary_utils.py  metrics.py  metrics_display.py  options_utils.py  price_valuation.py  sidebar.py
dashboard/config/: settings.py
dashboard/d_utils/: __init__.py  config.py
dashboard/pages/: __init__.py  financial_health.py  price_analysis.py
dashboard/utils/: data_processing.py
dashboard/views/: __init__.py  base.py  financial_health.py  glossary.py  growth_metrics.py  options_advisor.py  overview.py  risk_analysis.py
data/: __init__.py  cleaner.py  fetcher.py  forecast_fetcher.py  options_fetcher.py  peer_fetcher.py  source_status.py
data/fetcher/: __init__.py  fetcher.py
database/: README.md  README_ENHANCED.md  SCHEMA_DESIGN.md  __init__.py  cli.py  config.py  connection.py  exceptions.py  initialization.py
database/examples/: basic_usage.py  repository_usage_example.py
database/migrations/: alembic.ini  env.py
database/models/: __init__.py  analysis.py  market_data.py  portfolio.py  user.py
database/repositories/: README.md  __init__.py  analysis_repo.py  base.py  market_data_repo.py  portfolio_repo.py  session_manager.py  user_repo.py
database/seeds/: __init__.py  sample_analysis.py  sample_market_data.py  sample_portfolios.py
docs/: BUG_FIXES_SUMMARY.md  COST_ANALYSIS.md  ERROR_HANDLING_IMPROVEMENTS.md  PHASE_1C_COMPLETION_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SETTINGS_IMPACT_GUIDE.md  SETUP_GUIDE.md
docs/architecture/: DASHBOARD_RESTRUCTURE_SUMMARY.md
docs/deployment/: COST_OPTIMIZATION_GUIDE.md  COST_TRACKING_TEMPLATE.md  DEPLOYMENT.md  HYBRID_STORAGE_GUIDE.md  RUNNING_THE_APP.md
docs/development/: COMPREHENSIVE_SCORING_ENHANCEMENT_SUMMARY.md  OPTIONS_ADVISOR_SCORING_ENHANCEMENT.md  RISK_METRICS_TESTING_GUIDE.md
docs/features/: DATA_STATUS_MODULE.md  ENHANCED_RISK_TOLERANCE_SUMMARY.md  GOOGLE_ANALYTICS_INTEGRATION.md  RISK_METRICS.md
docs/fixes/: CRITICAL_OPTIONS_ERRORS_FIX.md  ERROR_HANDLING_IMPROVEMENTS.md  FORECAST_INTEGRATION_FIX.md  SETTINGS_PANEL_UPDATE_FIX.md  TICKER_CHANGE_FIX.md  TICKER_SYNCHRONIZATION_FIX.md
docs/glossary/: README.md  ui_implementations.md
docs/prompts/: REFACTORING_PROMPT.txt
examples/: README.md  __init__.py  data_status_demo.py  ecosystem_demo.py  enhanced_ml_demo.py  enhanced_ml_simple_demo.py  example_integration.py  gcs_storage_example.py  ml_foundation_demo.py
recommend/: __init__.py  recommender.py
requirements/: README.md  base.txt  dev.txt  phase2.txt  phase3.txt  phase3_task3.txt  test.txt
scripts/: remove_path_setup.py  run_app.py  run_dashboard.py  run_dashboard.sh  run_tests.py  run_tests_main.py  simple_config_test.py  stop_dashboard.sh  test_database_init.py  validate_phase2_readiness.py  verify_config.py
tests/: README.md  __init__.py  conftest.py  test_analytics.py  test_dashboard_error_handling.py  test_enhanced_local_ml.py  test_fallback_logic.py  test_glossary.py  test_ml_foundation.py  test_options_advisor.py  test_options_fetcher.py  test_options_math.py  test_options_strategy_integration.py  test_robust_fetchers.py  test_strategy_dispatcher.py  test_ticker_change_detection.py  test_ui_error_handling.py  test_ui_scoring_transparency.py  test_weight_normalization.py
tests/database/: conftest.py  test_config.py  test_error_handling.py  test_initialization.py  test_integration_comprehensive.py  test_migrations.py  test_performance.py  test_repository_comprehensive.py  test_repository_pattern.py  test_runner.py
tests/features/: __init__.py  conftest.py
tests/integration/: __init__.py  test_error_fixes_integration.py  test_options_advisor_ticker_sync.py  test_options_modular_integration.py  test_options_scoring_weights_integration.py  test_tab_integration.py
tests/unit/: __init__.py  test_data_utils.py  test_error_fixes.py  test_formatters.py  test_options_advisor_scoring.py  test_options_glossary.py  test_options_modular_architecture.py  test_options_scoring_weights.py  (+6 more)
utils/: __init__.py  cache.py  config.py  correlation_math.py  data_fetcher.py  data_report.py  errors.py  logger.py  options_math.py  validators.py
(+145 files in other folders)
